fix(ecommerce): product search results z-index

--- a/projects/ecommerce/src/app/home/shared/product-search/product-search.component.scss
+++ b/projects/ecommerce/src/app/home/shared/product-search/product-search.component.scss
@@ -52,6 +52,7 @@
   .results-cont {
     position: relative;
     text-align: left;
+    z-index: 1;
 
     .results,
     .no-results {
